fix: fix logout routing. fix sliders z-index

--- a/src/app/modules/videos/components/slider/slider.component.scss
+++ b/src/app/modules/videos/components/slider/slider.component.scss
@@ -4,6 +4,7 @@ h3 {
 }
 carousel {
   margin: 5px 0 20px;
+  z-index: 0;
 }
 
 .category {
